--- a/python_api/render.yaml
+++ b/python_api/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: python-api
-    env: python
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     plan: free
